--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<?
-    if (count($_POST)) {
-        include 'render.php';
-        exit;
-    }
-?>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -27,7 +21,7 @@
     </div>
     <div class="hero-unit">
         <h1>Hacete un Certificate of Belize</h1>
-        <form action="" method="post">
+        <form action="" method="post" id="form1">
             <p>Hacete uno y compartilo en Facebook!</p>
             <div class="input-append">
                 <input type="text" name="fullname" value="" placeholder="Juan Perez">
@@ -35,8 +29,17 @@
             </div>
         </form>
         <p>
-            <img src="artwork/v1.jpg" />
+            <img id="img-result" src="artwork/v1.jpg" />
         </p>
     </div>
+    <script>
+        var form = document.getElementById('form1'),
+            img = document.getElementById('img-result');
+        form.beforesubmit = function () {
+            alert('processing');
+            img.src = 'renderp.php?fullname=' + escape(form.fullname);
+            return false;
+        };
+    </script>
 </body>
 </html>
