--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Hacete un Certificate Of Incorporation de Belize!</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <!--link rel="stylesheet" href="index.css" type="text/css" /-->
 </head>
 <body>
     <div class="navbar navbar-fixed-top" style="position: absolute;">
@@ -29,7 +29,7 @@
             </div>
         </form>
         <p>
-            <img id="img-result" src="artwork/v1.jpg" />
+            <img id="img-result" src="render.php?fullname=Juan%20Perez" />
         </p>
     </div>
     <script>
