--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </form>
         <p>
             <img id="img-result" src="render.php?fullname=Juan%20Perez" />
+            <!-- tst -->
         </p>
     </div>
     <script>
