tuning with new fonts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Hacete un Certificate Of Incorporation de Belize!</title>
+    <title>Belize para Todos!</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
     <!--link rel="stylesheet" href="index.css" type="text/css" /-->
 </head>
@@ -10,7 +10,7 @@
     <div class="navbar navbar-fixed-top" style="position: absolute;">
         <div class="navbar-inner">
             <div class="container" style="width: auto; padding: 0 20px;">
-                <a class="brand" href="#">Hacete un Certificate Of Belize!</a>
+                <a class="brand" href="#">Belize para Todos!</a>
                 <ul class="nav">
                     <li class="active"><a href="#">Crear certificado</a></li>
                     <!--li><a href="#">Link</a></li>
