--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Belize para Todos!</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
-    <!--link rel="stylesheet" href="index.css" type="text/css" /-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="index.css" type="text/css" />
 </head>
 <body>
+
     <div class="navbar navbar-fixed-top" style="position: absolute;">
         <div class="navbar-inner">
             <div class="container" style="width: auto; padding: 0 20px;">
@@ -17,26 +20,78 @@
             </div>
         </div>
     </div>
-    <div class="hero-unit">
-        <h1>Hacete un Certificate of Belize</h1>
-        <form action="" method="post" id="form1">
-            <p>Hacete uno y compartilo en Facebook!</p>
-            <div class="input-append">
-                <input type="text" name="fullname" value="" maxlength="17" placeholder="Juan Perez">
-                <input class="btn btn-primary" name="render" type="submit" value="Generar!" />
+
+    <div class="container">
+
+        <div class="row-fluid top-row">
+
+            <div class="span6">
+                <div class="hero-unit">
+                    <h1>Hacete un Certificate of Belize</h1>
+                    <form action="" method="post" id="form1">
+                        <p>Hacete uno y compartilo en Facebook!</p>
+                        <div class="input-append">
+                            <input type="text" name="fullname" value="" maxlength="17" placeholder="Juan Perez">
+                            <input class="btn btn-primary" name="render" type="submit" value="Generar!" />
+                        </div>
+                    </form>
+                </div>
             </div>
-        </form>
-        <p>
-            <img id="img-result" src="render.php?fullname=Juan%20Perez" />
-        </p>
+
+            <div class="span4">
+
+                <script type="text/javascript"><!--
+                google_ad_client = "ca-pub-4000671410563799";
+                /* belize top */
+                google_ad_slot = "3514100812";
+                google_ad_width = 336;
+                google_ad_height = 280;
+                //-->
+                </script>
+                <script type="text/javascript"
+                src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+                </script>
+
+            </div>
+
+        </div>
+
+        <div class="row-fluid">
+
+            <div class="span12">
+                <div class="hero-unit result-container">
+                    <img id="img-result" src="render.php?fullname=Juan%20Perez" />
+                </div>
+            </div>
+
+        </div>
+
     </div>
+
     <script>
+        // yes, old school man... jquery is for gorillas
         var form = document.getElementById('form1'),
             img = document.getElementById('img-result');
+
         form.render.onclick = function () {
             img.src = 'render.php?fullname=' + escape(form.fullname.value);
             return false;
         };
+
+        form.fullname.focus();
     </script>
+
+    <script>
+
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-2981473-15', 'gosocial.com.ar');
+      ga('send', 'pageview');
+
+    </script>
+
 </body>
 </html>
