--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 
         </div>
 
+    <div class="jorgito-te-mira-serio"></div>
+
         <div class="row-fluid">
 
-            <div class="span12">
                 <div class="hero-unit result-container">
                     <img id="img-result" src="render.php?fullname=Juan%20Perez" />
                 </div>
-            </div>
-
         </div>
 
     </div>
+
 
     <script>
         // yes, old school man... jquery is for gorillas
