--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row-fluid top-row">
 
             <div class="span6">
-                <div class="hero-unit">
+                <div class="hero-unit call-to-action">
                     <h1>Hacete un Certificate of Belize</h1>
                     <form action="" method="post" id="form1">
                         <p>Hacete uno y compartilo en Facebook!</p>
