--- a/index.html
+++ b/index.html
@@ -60,15 +60,32 @@
 
         </div>
 
-    <div class="jorgito-te-mira-serio"></div>
 
         <div class="row-fluid">
 
-                <div class="hero-unit result-container">
-                    <img id="img-result" src="render.php?fullname=Juan%20Perez" />
-                </div>
+            <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-4000671410563799";
+            /* belize skyycreaper horizontal */
+            google_ad_slot = "4432430811";
+            google_ad_width = 728;
+            google_ad_height = 90;
+            //-->
+            </script>
+            <script type="text/javascript"
+            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+            </script>
+
         </div>
-	<div class="row-fluid">
+
+        <div class="jorgito-te-mira-serio"></div>
+
+        <div class="row-fluid">
+            <div class="hero-unit result-container">
+                <img id="img-result" src="render.php?fullname=Juan%20Perez" />
+            </div>
+        </div>
+
+    	<div class="row-fluid">
              <div class="span6"><a href="#" id="share-fb">Compartir en facebook</a></div>
              <div class="span6"><a href="#" id="share-tw">Twitear</a></div>
         </div>
