--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
              <div class="span6"><a href="#" id="share-tw">Twitear</a></div>
         </div>
 
+        <div class="row-fluid">
+
+            <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-4000671410563799";
+            /* belize skyycreaper horizontal */
+            google_ad_slot = "4432430811";
+            google_ad_width = 728;
+            google_ad_height = 90;
+            //-->
+            </script>
+            <script type="text/javascript"
+            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+            </script>
+
+        </div>
+
     </div>
 
 
