--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         fbshare.onclick = function() {
             fbShare(
                 "http://belize.gosocial.com.ar", 
-                'Blize para ' + escape(form.fullname.value) + ' Belize para TODOS', '', 
+                'Belize para ' + escape(form.fullname.value) + ' Belize para TODOS', '', 
                 'http://belize.gosocial.com.ar/render.php?fullname=' + escape(form.fullname.value),
                 600,
                 400
