--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
 
         <div class="row-fluid">
             <div class="hero-unit result-container">
+
                 <div id="img-art" class="default">
                     <img id="img-result" src="artwork/v1.jpg" />
                 </div>
-            </div>
-        </div>
 
-    	<div class="row-fluid">
-             <div class="span6"><a href="#" id="share-fb">Compartir en facebook</a></div>
-             <div class="span6"><a href="#" id="share-tw">Twitear</a></div>
+                <a href="#" id="share-fb">Compartir mi certificado en facebook!</a>
+                <a href="#" id="share-tw">Twitear mi certificado!</a>
+
+            </div>
         </div>
 
         <div class="row-fluid">
@@ -129,6 +129,7 @@
 
         form.fullname.focus();
     </script>
+
     <script>
         var fbshare = document.getElementById("share-fb");
         var tws = document.getElementById("share-tw");
@@ -158,6 +159,7 @@
             window.open('https://twitter.com/share?url=' + escape('http://belize.gosocial.com.ar')+   '&text=' + escape('Ya tengo mi certificate of incorporation! ' + url) + '&hashtags=' + escape('belizeParaTodos'), 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=' + winWidth + ',height=' + winHeight);
         }
     </script>
+
     <script>
 
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -169,12 +171,14 @@
       ga('send', 'pageview');
 
     </script>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=368564319929971";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=368564319929971";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
 </body>
 </html>
