--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="hero-unit call-to-action">
                     <h1>Hacete un Certificate of Belize</h1>
                     <form action="" method="post" id="form1">
-                        <p>Hacete uno y compartilo en Facebook!</p>
+                        <p>Hacete uno y compartilo en Facebook o Twitter!</p>
                         <div class="input-append">
                             <input type="text" name="fullname" value="" maxlength="25" placeholder="Jorge Inc.">
                             <input class="btn btn-primary" name="render" type="submit" value="Generar!" />
@@ -86,7 +86,7 @@
                     <img id="img-result" src="artwork/v1.jpg" />
                 </div>
 
-                <a href="#" id="share-fb">Compartir mi certificado en facebook!</a>
+                <a href="#" id="share-fb">Compartir mi certificado en Facebook!</a>
                 <a href="#" id="share-tw">Twitear mi certificado!</a>
 
             </div>
@@ -94,17 +94,37 @@
 
         <div class="row-fluid">
 
-            <script type="text/javascript"><!--
-            google_ad_client = "ca-pub-4000671410563799";
-            /* belize skyycreaper horizontal */
-            google_ad_slot = "4432430811";
-            google_ad_width = 728;
-            google_ad_height = 90;
-            //-->
-            </script>
-            <script type="text/javascript"
-            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-            </script>
+            <div class="span12">
+
+                <script type="text/javascript"><!--
+                google_ad_client = "ca-pub-4000671410563799";
+                /* belize skyycreaper horizontal */
+                google_ad_slot = "4432430811";
+                google_ad_width = 728;
+                google_ad_height = 90;
+                //-->
+                </script>
+                <script type="text/javascript"
+                src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+                </script>
+
+            </div>
+
+        </div>
+
+        <div class="row-fluid">
+
+            <div class="span12">
+
+                <div class="hero-unit">
+                    <h2>Para los que no saben de qué se trata...</h2>
+                    <p>No se pierdan este informe de @ddd_ok!</p>
+                    <iframe width="640" height="360" src="http://www.youtube.com/embed/toe2lWSJ10g?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
+
+                    <h2>En Twitter: <a href="https://twitter.com/search?q=%23BelizeParaTodos" target="_blank">#BelizeParaTodos</a>.</h2>
+                </div>
+
+            </div>
 
         </div>
 
@@ -136,7 +156,7 @@
         fbshare.onclick = function() {
             fbShare(
                 "http://belize.gosocial.com.ar", 
-                'Belize para ' + escape(form.fullname.value) + ' Belize para TODOS', '', 
+                'Belize para ' + escape(form.fullname.value) + ', Belize para TODOS', '', 
                 'http://belize.gosocial.com.ar/render.php?fullname=' + escape(form.fullname.value),
                 600,
                 400
